@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.568.2.37 2010/10/27 04:44:39 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.568.2.38 2010/11/12 19:34:39 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -1869,7 +1869,7 @@ C ... and restart the table:
 =colors
  For many terminal types it is also possible to assign user-defined colors
  using explicit rgb (red, green, blue) values, named colors, or color values
- that refer to the current PM3D palette.
+ that refer to the current pm3d palette.
 
  Examples:
 
@@ -3420,6 +3420,8 @@ Ffigure_yerrorlines
 2 3D (surface) plots
 ?3D (surface) plots
 ?plotting styles 3d (surface) plots
+=3D
+=surface
 Ffigure_surface
  Surface plots are generated using the `splot` command rather than the `plot`
  command. The style `with lines` draws a surface made from a grid of lines.
