@@ -1,5 +1,5 @@
 /*
- * $Id: util.h,v 1.31 2008/03/18 00:16:33 sfeam Exp $
+ * $Id: util.h,v 1.31.2.1 2010/11/12 19:34:39 sfeam Exp $
  */
 
 /* GNUPLOT - util.h */
@@ -108,7 +108,8 @@ void graph_error __PROTO(());
 /* Helper functions for help_command() */
 /* FIXME HBB 20010726: should be moved to where help_comamnd() is, and
  * made static. Currently, that's command.c, but it should probably
- * move to help.c, instead. */
+ * move to help.c, instead. 
+ * Nov 2010: lower_case() no longer used by help. */
 void lower_case __PROTO((char *));
 void squash_spaces __PROTO((char *));
 
